--- a/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_activty_three.xml
@@ -7,6 +7,198 @@
     tools:context=".postActivity.DetailActivityThree"
     android:background="@color/blanc">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/detail_image_post"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/app_bar_height"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintTop_toBottomOf="@+id/detail_image_post_toolbar" />
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/app_bar_height"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/detail_image_post"
+                    app:srcCompat="@drawable/background_detail" />
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/vendeur_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/fab_margin"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    app:layout_anchor="@id/app_bar"
+                    app:layout_constraintBottom_toBottomOf="@+id/view"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.945"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView5"
+                    app:srcCompat="@android:drawable/ic_dialog_email" />
+
+                <TextView
+                    android:id="@+id/detail_prix_produit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/bangers"
+                    android:text="1000 fcfa "
+                    android:textColor="@color/bg_screen1"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/detail_image_du_profil" />
+
+                <TextView
+                    android:id="@+id/date_de_publication"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:fontFamily="@font/fugaz_one"
+                    android:text="yannick Houdini"
+                    android:textColor="@color/blanc"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/detail_prix_produit" />
+
+                <ImageView
+                    android:id="@+id/detail_image_du_profil"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="380dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/imageView5"
+                    app:srcCompat="@drawable/boy" />
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbarDetail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:titleTextColor="@color/orange"
+                    android:background="@android:color/transparent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"></android.support.v7.widget.Toolbar>
+
+                <View
+                    android:id="@+id/view"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@color/black"
+                    android:visibility="invisible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+
+                <TextView
+                    android:id="@+id/detail_description"
+                    android:layout_width="@dimen/new_desc_text_width"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="60dp"
+                    android:layout_marginEnd="8dp"
+                    android:lineSpacingExtra="8dp"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/new_detail_desc_text_size"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/detail_image_post"
+                    tools:ignore="MissingConstraints" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/post_detail_currentuser_img"
+                    android:layout_width="@dimen/new_detail_height_image"
+                    android:layout_height="@dimen/new_detail_height_image"
+                    android:layout_marginStart="@dimen/new_detail_user_actual"
+                    android:layout_marginTop="@dimen/new_detail_top_actual_user"
+                    android:src="@drawable/boy"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/detail_description"
+                    tools:srcCompat="@tools:sample/avatars" />
+
+                <EditText
+                    android:id="@+id/post_detail_comment"
+                    android:layout_width="@dimen/new_detail_edit_width"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/new_detail_edit_start"
+                    android:ems="10"
+                    android:hint="ecrire un Commentaire"
+                    android:inputType="textMultiLine|textPersonName"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+                    android:textSize="@dimen/new_detail_edit_text_size"
+                    app:layout_constraintBottom_toBottomOf="@+id/post_detail_currentuser_img"
+                    app:layout_constraintStart_toEndOf="@+id/post_detail_currentuser_img"
+                    app:layout_constraintTop_toTopOf="@+id/post_detail_currentuser_img" />
+
+                <Button
+                    android:id="@+id/post_detail_add_comment_btn"
+                    android:layout_width="@dimen/new_detail_add_button"
+                    android:layout_height="@dimen/new_detail_add_height"
+                    android:layout_marginStart="4dp"
+                    android:background="@drawable/oval"
+                    android:text="add"
+                    android:textAllCaps="false"
+                    android:textColor="@color/blanc"
+                    android:textSize="@dimen/new_button_add_size"
+                    app:layout_constraintBottom_toBottomOf="@+id/post_detail_comment"
+                    app:layout_constraintStart_toEndOf="@+id/post_detail_comment"
+                    app:layout_constraintTop_toTopOf="@+id/post_detail_comment"
+                    app:layout_constraintVertical_bias="0.529" />
+
+
+
+                <TextView
+                    android:id="@+id/comment_empty_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="8dp"
+                    android:text="aucun commentaire"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.502"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/post_detail_comment" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_comment"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:background="@color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/comment_empty_text"></android.support.v7.widget.RecyclerView>
+            </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
+
+
+    <!--
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarDetail"
         android:layout_width="match_parent"
@@ -219,6 +411,6 @@
         app:layout_constraintBottom_toBottomOf="@+id/post_detail_add_comment_btn"
         app:layout_constraintEnd_toEndOf="@+id/post_detail_add_comment_btn"
         app:layout_constraintStart_toStartOf="@+id/post_detail_add_comment_btn"
-        app:layout_constraintTop_toTopOf="@+id/post_detail_add_comment_btn" />
+        app:layout_constraintTop_toTopOf="@+id/post_detail_add_comment_btn" /> -->
 
 </android.support.constraint.ConstraintLayout>
