--- a/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
@@ -25,7 +25,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/app_bar_height"
                     android:scaleType="centerCrop"
-                    app:layout_constraintTop_toBottomOf="@+id/detail_image_post_toolbar" />
+                    app:layout_constraintTop_toTopOf="@+id/detail_image_post_toolbar" />
 
                 <ImageView
                     android:id="@+id/imageView5"
@@ -33,7 +33,7 @@
                     android:layout_height="@dimen/app_bar_height"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/detail_image_post"
+                    app:layout_constraintTop_toTopOf="@+id/detail_image_post_toolbar"
                     app:srcCompat="@drawable/background_detail" />
 
                 <android.support.design.widget.FloatingActionButton
@@ -118,6 +118,8 @@
                     android:id="@+id/detail_image_post_toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:titleTextColor="@color/orange"
+                    android:background="@android:color/transparent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"></android.support.v7.widget.Toolbar>
