--- a/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
+++ b/CommunityMarket/app/src/main/res/layout/custum_pop_up.xml
@@ -10,7 +10,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
         android:layout_height="300dp"
-        app:cardCornerRadius="5dp"
+        app:cardCornerRadius="10dp"
         app:cardBackgroundColor="@color/black"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
@@ -23,11 +23,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
+            <pl.droidsonroids.gif.GifImageView
                 android:id="@+id/image_pop_up"
                 android:layout_width="0dp"
                 android:layout_height="150dp"
-                android:src="@drawable/shop"
+                android:src="@drawable/hello"
+                android:background="@color/blanc"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
