--- a/CommunityMarket/app/src/main/res/layout/activity_splash.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_splash.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toBottomOf="@+id/load_intro_text"
         app:layout_constraintVertical_bias="0.06" />
 
-    <TextView
+    <ImageView
 
         android:id="@+id/load_intro_text"
         android:layout_width="wrap_content"
@@ -36,6 +36,7 @@
         android:textColor="@color/black"
         android:textSize="40sp"
         android:textStyle="bold"
+        android:src="@mipmap/ic_launcher_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
