--- a/CommunityMarket/app/src/main/res/values/styles.xml
+++ b/CommunityMarket/app/src/main/res/values/styles.xml
@@ -24,4 +24,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow</item>
     </style>
+    <style name="ToolbarThemeTwo" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:fontFamily">@font/pacifico</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+    </style>
 </resources>
