--- a/CommunityMarket/app/src/main/res/layout/activity_choice.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_choice.xml
@@ -49,11 +49,13 @@
         android:textAllCaps="false"
         android:textColor="@color/blanc"
         android:textSize="@dimen/button_param_text_size"
+        android:background="@drawable/google_backgroung"
         android:visibility="visible"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gotoRegister" />
+        app:layout_constraintTop_toBottomOf="@+id/facebook_button" />
 
     <com.twitter.sdk.android.core.identity.TwitterLoginButton
         android:id="@+id/gotoRegister"
@@ -62,11 +64,11 @@
         android:layout_marginStart="@dimen/choice_button_width"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="@dimen/choice_button_width"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/facebook_button" />
+        app:layout_constraintTop_toBottomOf="@+id/gotoLogin" />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/facebook_button"
