--- a/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
+++ b/CommunityMarket/app/src/main/res/layout/activity_detail_two.xml
@@ -126,7 +126,7 @@
                     android:background="@android:color/transparent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"></android.support.v7.widget.Toolbar>
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <View
                     android:id="@+id/view"
@@ -163,6 +163,7 @@
                     android:layout_marginStart="@dimen/new_detail_user_actual"
                     android:layout_marginTop="@dimen/new_detail_top_actual_user"
                     android:src="@drawable/boy"
+                    android:visibility="invisible"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/detail_description"
                     tools:srcCompat="@tools:sample/avatars" />
@@ -178,6 +179,7 @@
                     android:textColor="@color/black"
                     android:textColorHint="@color/black"
                     android:textSize="@dimen/new_detail_edit_text_size"
+                    android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="@+id/post_detail_currentuser_img"
                     app:layout_constraintStart_toEndOf="@+id/post_detail_currentuser_img"
                     app:layout_constraintTop_toTopOf="@+id/post_detail_currentuser_img" />
@@ -192,6 +194,7 @@
                     android:textAllCaps="false"
                     android:textColor="@color/blanc"
                     android:textSize="@dimen/new_button_add_size"
+                    android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="@+id/post_detail_comment"
                     app:layout_constraintStart_toEndOf="@+id/post_detail_comment"
                     app:layout_constraintTop_toTopOf="@+id/post_detail_comment"
@@ -228,10 +231,26 @@
                     style="?android:attr/progressBarStyle"
                     android:layout_width="@dimen/new_detail_height_image"
                     android:layout_height="@dimen/new_detail_height_image"
+                    android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="@+id/post_detail_add_comment_btn"
                     app:layout_constraintEnd_toEndOf="@+id/post_detail_add_comment_btn"
                     app:layout_constraintStart_toStartOf="@+id/post_detail_add_comment_btn"
                     app:layout_constraintTop_toTopOf="@+id/post_detail_add_comment_btn" />
+
+                <Button
+                    android:id="@+id/voir_les_commentaire_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:background="@drawable/main_background"
+                    android:text="voir les un commentaires"
+                    android:textAllCaps="false"
+                    android:textColor="@color/blanc"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/detail_description" />
             </android.support.constraint.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
